<resources>
    <string name="app_name">Moka Shoppin Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library</string>
    <string name="all_items">All Items</string>
    <string name="all_discount">All Discounts</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="discount_a">%  Discount A</string>
    <string name="discount_b">%  Discount B</string>
    <string name="discount_c">%  Discount C</string>
    <string name="discount_d">%  Discount D</string>
    <string name="discount_e">%  Discount E</string>

    <string name="discount_a_per">0 %</string>
    <string name="discount_b_per">10 %</string>
    <string name="discount_c_per">35.5 %</string>
    <string name="discount_d_per">50 %</string>
    <string name="discount_e_per">100 %</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cancel">Cancel</string>
    <string name="discount">Discount</string>

    <string name="discount_a_txt"> Discount A (0%)</string>
    <string name="discount_b_txt"> Discount B (10%)</string>
    <string name="discount_c_txt"> Discount C (35.5%)</string>
    <string name="discount_d_txt"> Discount D (50%)</string>
    <string name="discount_e_txt"> Discount E (100%)</string>
    <string name="quantity_thousand_error">Quantity cannot be more than 1000</string>
    <string name="quantity_zero_error">Quantity cannot be less than 0</string>
    <string name="quantity_empty_error">Quantity cannot be empty</string>
    <string name="clear_sale">Clear Sale</string>
    <string name="charge_amount">Charge Rs.%s</string>
    <string name="bill_generated_successfully">Bill Generated Successfully</string>
    <string name="subtotal">Subtotal</string>
</resources>
