<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="15dp"
    android:background="#eeeeee"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:id="@+id/title_lyt"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            android:padding="10dp"
            android:textColor="#000000"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:id="@+id/close_icon"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/title_text"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_toRightOf="@+id/close_icon"
            android:layout_toLeftOf="@+id/save_button"
            android:padding="10dp"
            android:text="Discount A - 10%"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:text="@string/save"
            android:id="@+id/save_button"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:id="@+id/back_view"
        android:layout_below="@+id/title_lyt"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_view"
        android:id="@+id/quant_tv"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:text="@string/quantity"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quant_tv"
        android:id="@+id/rl_til"
        android:padding="10dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edt_lyt"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/box_background"
            app:errorEnabled="false"
            android:layout_toLeftOf="@+id/minus_icon"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:inputType="number"
                android:maxLength="4"
                android:text="1"
                android:id="@+id/quantity_edt"/>
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_centerVertical="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:background="@drawable/box_background"
            android:layout_toLeftOf="@+id/add_icon"
            android:textSize="25sp"
            android:text="@string/minus"
            android:id="@+id/minus_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_alignParentRight="true"
            android:text="@string/plus"
            android:id="@+id/add_icon"/>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_til"
        android:id="@+id/disc_tv"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/discount"/>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/disc_tv"
        android:id="@+id/discount_radio_group"
        android:padding="10dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/discount_a"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_width="match_parent"
            android:text="@string/discount_a_txt" />
        <RadioButton
            android:id="@+id/discount_b"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/discount_b_txt" />
        <RadioButton
            android:id="@+id/discount_c"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/discount_c_txt" />
        <RadioButton
            android:id="@+id/discount_d"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/discount_d_txt" />
        <RadioButton
            android:id="@+id/discount_e"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/discount_e_txt" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_below="@+id/discount_radio_group"
        android:layout_height="1dp"
        android:background="#000000"/>


</RelativeLayout>